--- a/nav.html
+++ b/nav.html
@@ -14,11 +14,11 @@
 
     <div class="collapse navbar-collapse" id="navcol-1">
         <ul class="navbar-nav mx-auto">
-            <li class="nav-item"><a class="nav-link active" href="/index.html">Начало</a></li>
-            <li class="nav-item"><a class="nav-link active" href="/services.html">Услуги</a></li>
-            <li class="nav-item"><a class="nav-link active" href="/projects.html">Проекти</a></li>
-            <li class="nav-item"><a class="nav-link active" href="/testimonials.html">Отзиви</a></li>
-            <li class="nav-item"><a class="nav-link active" href="/forus.html">За нас</a></li>
+            <li class="nav-item"><a class="nav-link active" href="./index.html">Начало</a></li>
+            <li class="nav-item"><a class="nav-link active" href="./services.html">Услуги</a></li>
+            <li class="nav-item"><a class="nav-link active" href="./projects.html">Проекти</a></li>
+            <li class="nav-item"><a class="nav-link active" href="./testimonials.html">Отзиви</a></li>
+            <li class="nav-item"><a class="nav-link active" href="./forus.html">За нас</a></li>
         </ul>
 
         <button class="btn btn-primary audit-btn">Безплатен одит</button>
