fix: add base path

--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <a class="navbar-brand brand-spacing" href="/">
+    <a class="navbar-brand brand-spacing" href="index.html">
         <img class="rounded-circle img-fluid object-fit-cover logo"
              src="assets/images/logo.png"
              loading="lazy"
