--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 
                     <p class="hero-text">
                         е Вашият доверен партньор за дигитален растеж.<br>
-                        Нашите маркетинг решения водят до
-                        <em>реални и измерими резултати.</em>
+                        Ние предлагаме всички маркетинг услуги на едно място, но по-важното…<br>
+                        Комбинираме ги в персонализирани решения, за да постигнем
+                        <i>реални и измерими резултати.</i>
                     </p>
 
                     <button class="btn btn-light hero-btn">
-                        Безплатен одит
+                        Безплатна консултация и маркетинг анализ
                     </button>
                 </div>
             </div>
@@ -48,12 +49,12 @@
         <div class="stats-box">
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col">
-                    <h4 data-count="180" data-suffix="+">0+</h4>
-                    <p>Среден ръст в печалбите</p>
+                    <h4 data-count="100" data-suffix="+">0+</h4>
+                    <p>Завършени проекта</p>
                 </div>
                 <div class="col">
-                    <h4 data-count="30" data-suffix="+">0+</h4>
-                    <p>Доволни клиенти</p>
+                    <h4 data-count="5" data-suffix="x">0x</h4>
+                    <p>Възвръщаемост на инвестицията</p>
                 </div>
                 <div class="col">
                     <h4 data-count="95" data-suffix="%">0%</h4>
@@ -154,14 +155,27 @@
         <div class="row">
             <div class="col-md-6 mb-4">
                 <div class="content-box p-4">
-                    <h3 class="mb-3">Защо да изберете нас?</h3>
-                    <p>С години опит в дигиталния маркетинг, ние сме специализирани в създаването на персонализирани решения, които отговарят на нуждите на всеки наш клиент.</p>
+                    <h3 class="mb-3">Защо ATS Media?</h3>
+                    <p>
+                        Като дигитална маркетинг агенция с екип от специалисти с над 20 години опит,
+                        ние помагаме на бизнеси от десетки индустрии да увеличат продажбите си и
+                        да изградят устойчиво пазарно влияние, работейки като дългосрочни партньори с
+                        бърза и ясна комуникация и гъвкаво, ориентирано към стойност ценообразуване.
+                    </p>
                 </div>
             </div>
             <div class="col-md-6 mb-4">
                 <div class="content-box p-4">
                     <h3 class="mb-3">Нашият подход</h3>
-                    <p>Комбинираме творчество с данни и анализи, за да постигнем максимални резултати за вашия бизнес в дигиталното пространство.</p>
+                    <ul class="methods">
+                        <li>
+                            The ATS Method - Accelerate, Transform, Succeed
+                        </li>
+                        <li>
+                            4 стъпков и 360“ работен процес целящ възвръщаемост на инвестицията от
+                            маркетинговите активности и сформиране на дългосрочно партньорство
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
