--- a/nav.html
+++ b/nav.html
@@ -21,6 +21,6 @@
             <li class="nav-item"><a class="nav-link active" href="./forus.html">За нас</a></li>
         </ul>
 
-        <button class="btn btn-primary audit-btn">Безплатен одит</button>
+        <button class="btn btn-primary audit-btn">Безплатна консултация и маркетинг анализ</button>
     </div>
 </div>
