feat: add carousel and images

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p class="hero-text">
                         е Вашият доверен партньор за дигитален растеж.<br>
                         Ние предлагаме всички маркетинг услуги на едно място, но по-важното…<br>
-                        Комбинираме ги в персонализирани решения, за да постигнем
+                        Комбинираме ги в <i>персонализирани решения</i>, за да постигнем
                         <i>реални и измерими резултати.</i>
                     </p>
 
@@ -79,6 +79,39 @@
                     <div class="certificate-item">
                         <img class="img-fluid partner-logo" src="assets/images/facebook_certificate.webp" alt="Facebook Certificate">
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Clients Carousel -->
+    <div class="container px-3 px-md-5">
+        <div class="row">
+            <div class="col-md-12 text-center mb-5">
+                <h2 class="section-heading">Нашите клиенти</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <div class="carousel-row">
+                    <div class="carousel-track scroll-right" id="row1"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <div class="carousel-row">
+                    <div class="carousel-track scroll-left" id="row2"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <div class="carousel-row">
+                    <div class="carousel-track scroll-right" id="row3"></div>
                 </div>
             </div>
         </div>
@@ -186,5 +219,6 @@
     <script src="assets/js/import.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/carousel.js"></script>
     </body>
 </html>
