feat: testimonials, remove duplicate styles

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <!-- Clients Carousel -->
-    <div class="container px-3 px-md-5">
+    <div class="container px-3 px-md-5 fade-in-element">
         <div class="row">
             <div class="col-md-12 text-center mb-5">
                 <h2 class="section-heading">Нашите клиенти</h2>
@@ -114,6 +114,118 @@
                     <div class="carousel-track scroll-right" id="row3"></div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Testimonials  -->
+    <div class="container fade-in-element">
+        <div class="row">
+            <div class="col-md-12 text-center mb-5">
+                <h2 class="section-heading">Отзиви от клиенти</h2>
+            </div>
+        </div>
+
+        <div id="testimonialsCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8 col-lg-6">
+                            <div class="testimonial-card p-5">
+                                <div class="quote-icon mb-3">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
+                                        <path d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z"/>
+                                    </svg>
+                                </div>
+                                <p class="testimonial-text">
+                                    Чудесен екип, който винаги подхожда с изключителен професионализъм.
+                                    Използваме услугите им за нашите цели в сферата на дигиталния маркетинг и сме
+                                    наистина удовлетворени от резултатите и ръста на продажбите, които заедно постигаме.
+                                    Благодарим ви!!!
+                                </p>
+                                <div class="testimonial-author mt-4">
+                                    <h5 class="author-name mb-0">Емилия Дочева</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8 col-lg-6">
+                            <div class="testimonial-card p-5">
+                                <div class="quote-icon mb-3">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
+                                        <path d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z"/>
+                                    </svg>
+                                </div>
+                                <p class="testimonial-text">
+                                    Работата с екипа на "Ей Ти Ес" беше едно от най-добрите решения за бизнеса ми!
+                                    Оптимизацията на сайта значително увеличи органичния трафик, а рекламите в Google и
+                                    Meta доведоха до повече клиенти. Изключително доволен съм и препоръчвам на всеки,
+                                    който търси професионални маркетингови услуги!</p>
+                                <div class="testimonial-author mt-4">
+                                    <h5 class="author-name mb-0">Кристиян Георгиев</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8 col-lg-6">
+                            <div class="testimonial-card p-5">
+                                <div class="quote-icon mb-3">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
+                                        <path d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z"/>
+                                    </svg>
+                                </div>
+                                <p class="testimonial-text">
+                                    ATS са една от малкото агенции, които наистина се вглеждат в специфичните нужди и изисквания
+                                    на клиента и създават решения, съобразени с тях. Изключително съм благодарен за бизнес стратегията,
+                                    която изготвиха за новостартиращия ми бизнес.
+                                    Работата с тях е истинско удоволствие и с нетърпение очаквам да продължим да се
+                                    развиваме заедно. Благодаря ви за подкрепата и професионализма! </p>
+                                <div class="testimonial-author mt-4">
+                                    <h5 class="author-name mb-0">Кольо Николаев</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8 col-lg-6">
+                            <div class="testimonial-card p-5">
+                                <div class="quote-icon mb-3">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
+                                        <path d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z"/>
+                                    </svg>
+                                </div>
+                                <p class="testimonial-text">
+                                    Изключително доволен съм от съвместната си работа с ATS! Благодарение на тяхната професионална поддръжка и оптимизация на социалните мрежи и уебсайта ни, съчетана с ефективна дигитална реклама, успяхме да увеличим оборота си с над 30% само за 3 месеца!
+
+                                    Благодарим ви за отдадеността, креативността и индивидуалния подход! Ако търсите екип, който да ви помогне да развиете бизнеса си на следващото ниво, горещо препоръчвам ATS!
+                                </p>
+                                <div class="testimonial-author mt-4">
+                                    <h5 class="author-name mb-0">Стоян Каназъров</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
 
