--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <base href="/ats-media/">
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="assets/css/utils.css">
@@ -295,36 +296,210 @@
         </div>
     </div>
 
-    <!-- Additional Content Section -->
-    <div class="container py-5 mb-5 fade-in-element">
-        <div class="row">
-            <div class="col-md-6 mb-4">
-                <div class="content-box p-4">
-                    <h3 class="mb-3">Защо ATS Media?</h3>
-                    <p>
-                        Като дигитална маркетинг агенция с екип от специалисти с над 20 години опит,
-                        ние помагаме на бизнеси от десетки индустрии да увеличат продажбите си и
-                        да изградят устойчиво пазарно влияние, работейки като дългосрочни партньори с
-                        бърза и ясна комуникация и гъвкаво, ориентирано към стойност ценообразуване.
-                    </p>
-                </div>
+<!--    Why Us-->
+    <div class="container fade-in-element">
+        <div class="col-md-12 text-center mb-5">
+            <h2 class="section-heading">
+                Защо ATS Media?
+            </h2>
+        </div>
+
+        <div class="row gx-5">
+            <div class="col-md-6 col-lg-6">
+                <img src="assets/images/why-us.png" alt="Why Us?" class="img-fluid"/>
             </div>
-            <div class="col-md-6 mb-4">
-                <div class="content-box p-4">
-                    <h3 class="mb-3">Нашият подход</h3>
-                    <ul class="methods">
-                        <li>
-                            The ATS Method - Accelerate, Transform, Succeed
-                        </li>
-                        <li>
-                            4 стъпков и 360“ работен процес целящ възвръщаемост на инвестицията от
-                            маркетинговите активности и сформиране на дългосрочно партньорство
-                        </li>
-                    </ul>
-                </div>
-            </div>
+
+            <ul class="col-md-6 col-lg-6 list-unstyled">
+                <li class="mb-4 d-flex gap-3 align-items-start">
+                    <div class="check-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="48" height="48" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                        </svg>
+                    </div>
+
+                    <div class="text-start fw-bold fs-5">
+                    <h5>Всички дигитални и маркетинг услуги на едно място: </h5>
+                        <i class="fw-light">
+                        Ние предоставяме 360° обслужване, за да имате 1 точка на контакт и да не се налага да
+                        координирате работата на множество различни агенции, работещи “на парче” върху бизнеса Ви…
+                        </i>
+                    </div>
+                </li>
+                <li class="mb-4 d-flex gap-3 align-items-start">
+                    <div class="check-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="48" height="48" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                        </svg>
+                    </div>
+
+                    <div class="text-start fw-bold fs-5">
+                    <h5>Дигитален маркетинг ориентиран към резултати: </h5>
+                        <i class="fw-light">
+                            Нашата цел е да Ви доставим ефективен маркетинг, който не просто привлича внимание,
+                            а носи реални и измерими резултати.
+                        </i>
+                    </div>
+                </li>
+                <li class="mb-4 d-flex gap-3 align-items-start">
+                    <div class="check-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="48" height="48" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                        </svg>
+                    </div>
+
+                    <div class="text-start fw-bold fs-5">
+                        <h5>Гъвкавост при ценообразуването: </h5>
+                        <i class="fw-light">
+                            Независимо дали разполагате с малък или голям маркетингов бюджет,
+                            можем да адаптираме системата спрямо Вашите моментни финансови възможности,
+                            за да Ви помогнем да извлечете максимума от тях.
+                        </i>
+                    </div>
+                </li>
+                <li class="mb-4 d-flex gap-3 align-items-start justify-content-start">
+                    <div class="check-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="48" height="48" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                        </svg>
+                    </div>
+
+                    <div class="text-start fw-bold fs-5">
+                    <h5>Бърза и лесна комуникация: </h5>
+                        <i class="fw-light">
+                        Осигурили сме лесна 24/7 комуникация и няма да Ви се наложи да чакате повече от час за отговор
+                        </i>
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
+
+<!--    Work Process-->
+    <section id="work-process" class="work-process section">
+        <div class="container col-md-12 text-center mb-5">
+            <h2 class="section-heading">
+                Работен процес
+            </h2>
+            <h4 class="mt-5"> The ATS Method (Accelerate, Transform, Succeed): </h4>
+            <p class="fs-5">
+                Нашият 4 стъпков работен процес цели да максимизира
+                възвръщаемостта на инвестицията от маркетинговите
+                активности и да Ви помогне да разрастнете бизнеса си.
+            </p>
+        </div>
+
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+            <div class="row justify-content-center gy-5 mb-5">
+                <div class="col-lg-5" data-aos="fade-up" data-aos-delay="200">
+                    <div class="steps-item">
+                        <div class="steps-image">
+                            <img src="assets/images/steps/steps-2.webp" alt="Step 1" class="img-fluid" loading="lazy">
+                        </div>
+                        <div class="steps-content">
+                            <div class="steps-number">01</div>
+                            <h3>Анализ на състоянието</h3>
+                            <p>
+                                Започваме с детайлен анализ на индустрията Ви, на клиентското поведение в нея,
+                                както и моментното позициониране на бранда Ви спрямо конкурентите.
+                            </p>
+                            <div class="steps-features">
+                                <div class="feature-item">
+                                    <i class="bi bi-check-circle-fill"></i>
+                                    <span>Анализ на индустрията</span>
+                                </div>
+                                <div class="feature-item">
+                                    <i class="bi bi-check-circle-fill"></i>
+                                    <span>Анализ на клиенти</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-5" data-aos="fade-up" data-aos-delay="300">
+                    <div class="steps-item">
+                        <div class="steps-image">
+                            <img src="assets/images/steps/steps-1.webp" alt="Step 2" class="img-fluid" loading="lazy">
+                        </div>
+                        <div class="steps-content">
+                            <div class="steps-number">02</div>
+                            <h3>Персонализирана стратегия</h3>
+                            <p>
+                                Създаваме профил на Вашите “идеални клиенти” (ICPs) и определяме на конкурентните
+                                Ви предимства.
+                            </p>
+                            <div class="steps-features">
+                                <div class="feature-item">
+                                    <i class="bi bi-check-circle-fill"></i>
+                                    <span>Персонализирана Стратегия</span>
+                                </div>
+                                <div class="feature-item">
+                                    <i class="bi bi-check-circle-fill"></i>
+                                    <span>Привличане на идеалните клиенти</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row justify-content-center gy-5">
+                <div class="col-lg-5" data-aos="fade-up" data-aos-delay="400">
+                    <div class="steps-item">
+                        <div class="steps-image">
+                            <img src="assets/images/steps/steps-3.webp" alt="Step 3" class="img-fluid" loading="lazy">
+                        </div>
+                        <div class="steps-content">
+                            <div class="steps-number">03</div>
+                            <h3>Настройка на аналитични инструменти и системи за проследяване</h3>
+                            <p>
+                                Настройваме аналитични инструменти, чрез които успешно проследяваме резултатите от
+                                маркетинговите активности и измерваме на възвръщаемостта на инвестицията Ви.
+                            </p>
+                            <div class="steps-features">
+                                <div class="feature-item">
+                                    <i class="bi bi-check-circle-fill"></i>
+                                    <span>Проследяване на маркетинговите резултати</span>
+                                </div>
+                                <div class="feature-item">
+                                    <i class="bi bi-check-circle-fill"></i>
+                                    <span>Измерване на възвръщаемостта на инвестицията</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-5" data-aos="fade-up" data-aos-delay="400">
+                    <div class="steps-item">
+                        <div class="steps-image">
+                            <img src="assets/images/steps/steps-3.webp" alt="Step 3" class="img-fluid" loading="lazy">
+                        </div>
+                        <div class="steps-content">
+                            <div class="steps-number">04</div>
+                            <h3>Управление и оптимизация</h3>
+                            <p>
+                                Непрекъснато следим представянето на кампаниите Ви в отделните канали и го
+                                оптимизираме, за да максимизираме печалбите Ви.
+                            </p>
+                            <div class="steps-features">
+                                <div class="feature-item">
+                                    <i class="bi bi-check-circle-fill"></i>
+                                    <span>Оптимизиране</span>
+                                </div>
+                                <div class="feature-item">
+                                    <i class="bi bi-check-circle-fill"></i>
+                                    <span>Мониторинг</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
 
     <footer class="text-center py-4"></footer>
     <!-- Scripts -->
