small design fixes

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     </div>
 
 <!--    Work Process-->
-    <section id="work-process" class="work-process section">
+    <section id="work-process" class="work-process section fade-in-element">
         <div class="container col-md-12 text-center mb-5">
             <h2 class="section-heading">
                 Работен процес
@@ -416,7 +416,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-5" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-5 h-100" data-aos="fade-up" data-aos-delay="300">
                     <div class="steps-item">
                         <div class="steps-image">
                             <img src="assets/images/steps/steps-1.webp" alt="Step 2" class="img-fluid" loading="lazy">
@@ -431,7 +431,7 @@
                             <div class="steps-features">
                                 <div class="feature-item">
                                     <i class="bi bi-check-circle-fill"></i>
-                                    <span>Персонализирана Стратегия</span>
+                                    <span>Персонализирана стратегия</span>
                                 </div>
                                 <div class="feature-item">
                                     <i class="bi bi-check-circle-fill"></i>
@@ -473,7 +473,7 @@
                 <div class="col-lg-5" data-aos="fade-up" data-aos-delay="400">
                     <div class="steps-item">
                         <div class="steps-image">
-                            <img src="assets/images/steps/steps-3.webp" alt="Step 3" class="img-fluid" loading="lazy">
+                            <img src="assets/images/steps/steps-4.jpg" alt="Step 4" class="img-fluid" loading="lazy">
                         </div>
                         <div class="steps-content">
                             <div class="steps-number">04</div>
