feat: create contact section, fix nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body class="text-center">
-    <nav class="navbar navbar-expand-md bg-black position-sticky d-block" data-bs-theme="dark"></nav>
+    <nav class="navbar navbar-expand-md bg-black sticky-top" data-bs-theme="dark"></nav>
 
     <!-- Hero -->
     <section class="hero-section">
@@ -37,9 +37,9 @@
                         <i>реални и измерими резултати.</i>
                     </p>
 
-                    <button class="btn btn-light hero-btn">
-                        Безплатна консултация и маркетинг анализ
-                    </button>
+                    <a href="contact.html" class="btn btn-light hero-btn">
+                        Безплатна консултация
+                    </a>
                 </div>
             </div>
         </div>
@@ -119,7 +119,7 @@
     </div>
 
     <!-- Testimonials  -->
-    <div class="container fade-in-element">
+    <section id="testimonials" class="container fade-in-element">
         <div class="row">
             <div class="col-md-12 text-center mb-5">
                 <h2 class="section-heading">Отзиви от клиенти</h2>
@@ -228,7 +228,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-    </div>
+    </section>
 
     <!-- Services Grid Section -->
     <div class="container py-5 fade-in-element">
