--- a/nav.html
+++ b/nav.html
@@ -17,10 +17,10 @@
             <li class="nav-item"><a class="nav-link active" href="./index.html">Начало</a></li>
             <li class="nav-item"><a class="nav-link active" href="./services.html">Услуги</a></li>
             <li class="nav-item"><a class="nav-link active" href="./projects.html">Проекти</a></li>
-            <li class="nav-item"><a class="nav-link active" href="./testimonials.html">Отзиви</a></li>
-            <li class="nav-item"><a class="nav-link active" href="./forus.html">За нас</a></li>
+            <li class="nav-item"><a class="nav-link active" href="#testimonials">Отзиви</a></li>
+            <li class="nav-item"><a class="nav-link active" href="./contact.html">Контакт</a></li>
         </ul>
 
-        <button class="btn btn-primary audit-btn">Безплатна консултация и маркетинг анализ</button>
+        <a href="contact.html" class="btn btn-primary audit-btn">Безплатна консултация</a>
     </div>
 </div>
