--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-md bg-black position-sticky d-block" data-bs-theme="dark"></nav>
 
     <!-- Page Header -->
-    <section class="projects-header py-5">
+    <section class="hero-overlay py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center fade-in-element">
@@ -51,10 +51,10 @@
             <div class="col-md-4">
                 <div class="services-card h-100">
                     <div class="services-image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPUTebPv44H-P-3zNn95s89m6ZrVM_r5YYSg&s" alt="Project 1" class="img-fluid">
+                        <img src="assets/images/banners/aladin-banner.webp" alt="Aladin Foods" class="img-fluid">
                     </div>
                     <div class="services-body p-3">
-                        <h4 class="services-title">Име на проект 1</h4>
+                        <h4 class="services-title">Aladin Foods</h4>
                     </div>
                 </div>
             </div>
@@ -63,10 +63,10 @@
             <div class="col-md-4">
                 <div class="services-card h-100">
                     <div class="services-image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPUTebPv44H-P-3zNn95s89m6ZrVM_r5YYSg&s" alt="Project 2" class="img-fluid">
+                        <img src="assets/images/banners/forcelabs-banner.jpg" alt="ForceLab" class="img-fluid">
                     </div>
                     <div class="services-body p-3">
-                        <h4 class="services-title">Име на проект 2</h4>
+                        <h4 class="services-title">ForceLab</h4>
                     </div>
                 </div>
             </div>
@@ -88,10 +88,10 @@
             <div class="col-md-4">
                 <div class="services-card h-100">
                     <div class="services-image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPUTebPv44H-P-3zNn95s89m6ZrVM_r5YYSg&s" alt="Project 1" class="img-fluid">
+                        <img src="assets/images/banners/levins-banner.webp" alt="LevIns" class="img-fluid">
                     </div>
                     <div class="services-body p-3">
-                        <h4 class="services-title">Име на проект 1</h4>
+                        <h4 class="services-title">LevIns</h4>
                     </div>
                 </div>
             </div>
@@ -100,16 +100,53 @@
             <div class="col-md-4">
                 <div class="services-card h-100">
                     <div class="services-image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPUTebPv44H-P-3zNn95s89m6ZrVM_r5YYSg&s" alt="Project 2" class="img-fluid">
+                        <img src="assets/images/banners/svr-banner.webp" alt="SVR" class="img-fluid">
                     </div>
                     <div class="services-body p-3">
-                        <h4 class="services-title">Име на проект 2</h4>
+                        <h4 class="services-title">SVR</h4>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+
+    <div class="container py-5 fade-in-element">
+        <div class="row g-4 align-items-stretch">
+            <!-- Google Ads -->
+            <div class="col-md-4">
+                <div class="service-info-box p-4 h-100 d-flex flex-column justify-content-center">
+                    <h2 class="service-section-title text-center mb-3">Social Media Marketing</h2>
+                    <hr>
+                    <p class="service-section-description">Ние създаваме кампании, и увеличаваме оборота на клиентските онлайн магазини.</p>
+                </div>
+            </div>
+
+            <!-- Project Card 1 -->
+            <div class="col-md-4">
+                <div class="services-card h-100">
+                    <div class="services-image">
+                        <img src="assets/images/banners/soPharmacy-banner.avif" alt="SoPharmacy" class="img-fluid">
+                    </div>
+                    <div class="services-body p-3">
+                        <h4 class="services-title">SoPharmacy</h4>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project Card 2 -->
+            <div class="col-md-4">
+                <div class="services-card h-100">
+                    <div class="services-image">
+                        <img src="assets/images/banners/dr-denkova-banner.webp" alt="Dr Denkova Dermatology" class="img-fluid">
+                    </div>
+                    <div class="services-body p-3">
+                        <h4 class="services-title">Dr Denkova Dermatology</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer class="text-center py-4"></footer>
 
