--- a/index.html
+++ b/index.html
@@ -247,7 +247,10 @@
                         </svg>
                     </div>
                     <h3 class="service-title mb-3">Facebook реклама</h3>
-                    <p class="service-description">Изграждаме печеливши Facebook кампании, които достигат точната аудитория и превръщат кликовете в реални клиенти. В Evolut Digital анализираме поведението на потребителите, тестваме различни послания и създаваме визии, които продават. Нашата цел е ясна – повече резултати с по-малко изхарчен бюджет.</p>
+                    <p class="service-description">
+                        Изграждаме печеливши Facebook кампании, които достигат точната аудитория и превръщат кликовете в реални клиенти.
+                        В ATS анализираме поведението на потребителите, тестваме различни послания и създаваме визии, които продават.
+                        Нашата цел е ясна – повече резултати с по-малко изхарчен бюджет.</p>
                     <button class="btn btn-outline-light mt-3">Научи повече</button>
                 </div>
             </div>
@@ -261,7 +264,10 @@
                         </svg>
                     </div>
                     <h3 class="service-title mb-3">Google Ads</h3>
-                    <p class="service-description">Бъдете там, където клиентите ви търсят. С нашите Google Ads кампании ще излизате на първи позиции при най-важните ключови думи за вашия бизнес. Оптимизираме всеки клик, за да носи реална стойност – повече обаждания, запитвания и продажби.</p>
+                    <p class="service-description">
+                        Бъдете там, където клиентите ви търсят. С нашите Google Ads кампании ще излизате на първи позиции
+                        при най-важните ключови думи за вашия бизнес. Оптимизираме всеки клик, за да носи реална стойност – повече обаждания,
+                        запитвания и продажби.</p>
                     <button class="btn btn-outline-light mt-3">Научи повече</button>
                 </div>
             </div>
