made pages responsive

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 
             <div class="container">
                 <div class="row justify-content-center g-5">
-                    <div class="call-box col-6" role="button" aria-label="Обади се сега">
+                    <div class="call-box col-12 col-md-6" role="button" aria-label="Обади се сега">
                         <div class="call-icon">
                             <i class="bi bi-telephone"></i>
                         </div>
@@ -61,7 +61,7 @@
                         <button class="audit-btn text-white mx-0 mt-3">Свържи се с нас</button>
                     </div>
 
-                    <div class="col-6">
+                    <div class="col-12 col-md-6">
                         <div class="expectations-box">
                             <h5>Какво да очакваш</h5>
                             <div class="d-flex gap-2 align-items-start justify-content-center mt-2">
