--- a/nav.html
+++ b/nav.html
@@ -17,6 +17,7 @@
             <li class="nav-item"><a class="nav-link active" href="./index.html">Начало</a></li>
             <li class="nav-item"><a class="nav-link active" href="./services.html">Услуги</a></li>
             <li class="nav-item"><a class="nav-link active" href="#testimonials">Отзиви</a></li>
+            <li class="nav-item"><a class="nav-link active" href="./gallery.html">Галерия</a></li>
             <li class="nav-item"><a class="nav-link active" href="./contact.html">Контакт</a></li>
         </ul>
 
